@@ -10,6 +10,7 @@ version 0.83 (git)
 - Tolerance for OS's without timezone in their struct tm (e.g. Solaris)
   added iso9660_set_{d,l}time_with_timezone
 - Add mmc_get_disk_erasable
+- Update MMC Feature Profile list
 
 version 0.82
 2009-10-27
